# own-project-boulais01

./: README.md  project_proposal.md
src/: README.md
src/mousetracker/: pyproject.toml
src/mousetracker/data/: 2024-03-05-20-08-13.json  2024-03-05-20-10-36.json  2024-03-05-20-36-12.json  2024-03-05-21-00-37.json  2024-03-05-21-01-10.json  2024-03-05-21-01-27.json  2024-05-03HH-MM-SS.json  data.json
src/mousetracker/mousetracker/: game.py  game_utils.py  main.py  processing.py  tracker.py
